# tagpatch

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
tagpatch/: __main__.py  options.py  types.py  utils.py
tagpatch/patches/: artist_name.py  download_lrc.py  embed_lrc.py  patch.py
tests/: test_patches.py  test_utils.py
tests/data/song1/: ATTRIBUTION.txt
