[project]
name = "tagpatch"
version = "0.1.3"
authors = [{ name = "Anchit Bajaj", email = "python.pypi@abifog.com" }]
description = "CLI tool which applies common patches to music tags"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["music", "tag"]
dependencies = [
    "music-tag==0.4.3",
    "click==8.1.4",
    "tabulate==0.9.0",
    "mutagen==1.46.0",
]

[project.scripts]
tagpatch = "tagpatch.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tagpatch"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"
extend-include = ["*.ipynb"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
