[project]
name = "tagpatch"
version = "0.1.3"
authors = [{ name = "Anchit Bajaj", email = "python.pypi@abifog.com" }]
description = "CLI tool which applies common patches to music tags"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["music", "tag"]
dependencies = [
    "typer==0.20.1",
    "music-tag>=0.4.3",
    "mutagen>=1.47.0",
    "tabulate>=0.9.0",
]

[project.scripts]
tagpatch = "tagpatch.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tagpatch"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "C4",
    "FA",
    "ISC",
    "ICN",
    "RET",
    "SIM",
    "TID",
    "TC",
    "PTH",
    "TD",
    "NPY",
]


[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = ["mypy>=1.14.1", "types-tabulate>=0.9.0.20241207"]
