[metadata]
name = tagpatch
version = 0.1.0
author = Anchit Bajaj
description = CLI tool which applies common patches to music tags
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, music, tag
licence = MIT

[options]
packages = tagpatch
python_requires = >=3.9
install_requires =
    music_tag
    click

[options.package_data]
    file: README.md, LICENSE

[options.entry_points]
console_scripts =
    tagpatch = tagpatch.__main__:main
